fix: align chip to the right, fix logo in dark mode

--- a/src/components/tx/security/redefine/RedefineBalanceChange/styles.module.css
+++ b/src/components/tx/security/redefine/RedefineBalanceChange/styles.module.css
@@ -13,6 +13,11 @@
   text-overflow: ellipsis;
 }
 
+.categoryChip {
+  border-radius: 4px;
+  margin-left: auto;
+}
+
 .head {
   border-bottom: 1px solid var(--color-border-light);
   padding: 0 var(--space-2) var(--space-1) var(--space-2);
